--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,600;1,600;1,700&display=swap"
       rel="stylesheet" />
     <!-- css -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/card1.css" />
     <link rel="stylesheet" href="css/musicstyle.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/templatemo-digimedia-v1.css" />
     <link
       rel="stylesheet"
       href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/614007/swiper.min.css" />
@@ -37,8 +37,6 @@
         <a href="#contact">Contact</a>
       </div>
       <div class="navbar-extra1">
-        <a href="#" id="search"> <i data-feather="search"></i></a>
-
         <a href="#" id="hamburger-menu1"> <i data-feather="menu"></i></a>
       </div>
     </nav>
@@ -53,7 +51,7 @@
           kesehatan mental. Mari berjalan bersama menuju kesehatan mental yang
           lebih baik!
         </p>
-        <a href="#" class="cta1">Go</a>
+        <a href="/test.html" class="go">Go</a>
       </main>
     </section>
     <!-- Hero section End -->
@@ -670,16 +668,79 @@
       </div>
     </section>
     <!-- About Section End-->
+    
+    <!-- Contact Section Strat -->
+    <section class="contact" id="contact">
+      <h2><span>Contact </span>kami</h2>
+      <div class="container">
+        <div class="row">
+          <img src="/images/avatar1.jpg" alt="" class="toggle"  data-facebook="https://www.facebook.com/user1" data-twitter="https://twitter.com/user1" data-instagram="https://www.instagram.com/">
+          <h3>Pembimbing</h3>
+          <p>Gita Fadila Fitriana, S.Kom., M.Kom</p>
+        </div>
+      </div>
+      <div class="container1">
+        <div class="row">
+          <img src="/images/avatar2.jpg" alt="" class="toggle"  data-facebook="https://www.facebook.com/" data-twitter="https://twitter.com/user2" data-instagram="https://www.instagram.com/user2">
+          <h3>Anggota</h3>
+          <p>Rosalina Alda</p>
+        </div>
+        <div class="row">
+          <img src="/images/avatar2.jpg" alt="" class="toggle"  data-facebook="https://www.facebook.com/" data-twitter="https://twitter.com/user2" data-instagram="https://www.instagram.com/user2">
+          <h3>Ketua</h3>
+          <p>Bintang Ahmada Farhan Adama</p>
+        </div>
+        <div class="row">
+          <img src="/images/avatar2.jpg" alt=""  class="toggle"  data-facebook="https://www.facebook.com/" data-twitter="https://twitter.com/user2" data-instagram="https://www.instagram.com/user2">
+          <h3>anggota</h3>
+          <p>Satya Prakash</p>
+        </div>
+        <div class="row">
+          <img src="/images/avatar2.jpg" alt="" class="toggle"  data-facebook="https://www.facebook.com/" data-twitter="https://twitter.com/user2" data-instagram="https://www.instagram.com/user2">
+          <h3>anggota</h3>
+          <p>Mivtakhul Janah</p>
+        </div>
+        <div class="row">
+          <img src="/images/avatar2.jpg" alt="" class="toggle"  data-facebook="https://www.facebook.com/" data-twitter="https://twitter.com/user2" data-instagram="https://www.instagram.com/user2">
+          <h3>anggota</h3>
+          <p>Musyaffa Ahmad Robbani</p>
+        </div>
+      </div>
+    </section>
+  
+    <div class="social-icons">
+      <!-- Social icons will be dynamically added here -->
+    </div>
+    <!-- Contact Section End -->
 
+    <footer>
+      <div class="sosial">
+        <a href="#"><i data-feather="mail"></i></a>
+        <a href="#"><i data-feather="instagram"></i></a>
+        <a href="#"><i data-feather="youtube"></i></a>
+      </div>
+      <div class="links">
+        <a href="#">Home</a>
+        <a href="#about1">About</a>
+        <a href="#Menu">Menu</a>
+        <a href="#Music">Music</a>
+        <a href="#contact">Contact</a>
+      </div>
+      <div class="credit">
+        <p>Created by <a href=""> Mentality.ID</a></p>
+      </div>
+    </footer>
     <script>
       feather.replace();
     </script>
-    <script src="assets/js/owl-carousel.js"></script>
-    <script src="assets/js/custom.js"></script>
+
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/614007/swiper.jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/script.js"></script>
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/614007/swiper.jquery.min.js"></script>
     <script src="js/card2.js"></script>
+    <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  
   </body>
 </html>
