--- a/test.html
+++ b/test.html
@@ -15,11 +15,11 @@
         ><span id="span2">Mentality</span><span id="span1">.ID</span></a
       >
       <div class="navbar-nav1">
-        <a href="#">Home</a>
-        <a href="#about1">About</a>
-        <a href="#Menu">Menu</a>
-        <a href="#Music">Music</a>
-        <a href="#contact">Contact</a>
+        <a href="/index.html#">Home</a>
+        <a href="/index.html#about1">About</a>
+        <a href="/index.html#Menu">Menu</a>
+        <a href="/index.html#Music">Music</a>
+        <a href="/index.html#contact">Contact</a>
       </div>
       <div class="navbar-extra1">
         <a href="#" id="hamburger-menu1"> <i data-feather="menu"></i></a>
