--- a/test.html
+++ b/test.html
@@ -72,7 +72,10 @@
           <div class="question" id="question1">
             <label for="q1">
               <h3>Pertanyaan 1:</h3>
-              <p>Apakah tekanan Sistolik anda mencapai 130-139 mmHg?</p></label
+              <p>
+                Apakah dalam sebulan belakangan ini Anda sering menderita sakit
+                kepala?
+              </p></label
             >
             <label
               ><input type="radio" id="q1" name="q1" value="G1" /><span
@@ -87,7 +90,9 @@
           <div class="question" id="question2">
             <label for="q2">
               <h3>Pertanyaan 2:</h3>
-              <p>Apakah tekanan Diastolik anda mencapai 85-89 mmHg?</p></label
+              <p>
+                Apakah dalam sebulan belakangan ini nafsu makan Anda turun?
+              </p></label
             >
             <label
               ><input type="radio" id="q2" name="q2" value="G2" /><span
@@ -102,7 +107,9 @@
           <div class="question" id="question3">
             <label for="q3">
               <h3>Pertanyaan 3:</h3>
-              <p>Apakah tekanan Sistolik anda mencapai 140-159 mmHg??</p></label
+              <p>
+                Apakah dalam sebulan belakangan ini Anda sulit tidur?
+              </p></label
             >
             <label
               ><input type="radio" id="q3" name="q3" value="G3" /><span
@@ -117,7 +124,9 @@
           <div class="question" id="question4">
             <label for="q4">
               <h3>Pertanyaan 4:</h3>
-              <p>Apakah tekanan Diastolik anda mencapai 90-99 mmHg?</p></label
+              <p>
+                Apakah dalam sebulan belakangan ini Anda sering ketakutan?
+              </p></label
             >
             <label
               ><input type="radio" id="q4" name="q4" value="G4" />
@@ -131,7 +140,10 @@
           <div class="question" id="question5">
             <label for="q5">
               <h3>Pertanyaan 5:</h3>
-              <p>Apakah tekanan Sistolik anda mencapai 160-179 mmHg?</p></label
+              <p>
+                Apakah dalam sebulan belakangan ini Anda merasa gugup tegang
+                atau khawatir?
+              </p></label
             >
             <label
               ><input type="radio" id="q5" name="q5" value="G5" /><span
@@ -146,7 +158,9 @@
           <div class="question" id="question6">
             <label for="q6">
               <h3>Pertanyaan 6:</h3>
-              <p>Apakah tekanan Diastolik anda mencapai 100-109 mmHg?</p></label
+              <p>
+                Apakah dalam sebulan belakangan ini tangan Anda sering gemetar?
+              </p></label
             >
             <label
               ><input type="radio" id="q6" name="q6" value="G6" /><span
@@ -161,7 +175,9 @@
           <div class="question" id="question7">
             <label for="q7">
               <h3>Pertanyaan 7:</h3>
-              <p>Apakah tekanan Sistolik anda melebihi 220 mmHg?</p></label
+              <p>
+                Apakah dalam sebulan belakangan ini pencernaan Anda terganggu?
+              </p></label
             >
             <label
               ><input type="radio" id="q7" name="q7" value="G7" /><span
@@ -176,7 +192,9 @@
           <div class="question" id="question8">
             <label for="q8">
               <h3>Pertanyaan 8:</h3>
-              <p>Apakah tekanan Diastolik anda melebihi 140 mmHg?</p></label
+              <p>
+                Apakah dalam sebulan belakangan ini Anda sulit berpikir jernih?
+              </p></label
             >
             <label
               ><input type="radio" id="q8" name="q8" value="G8" /><span
@@ -191,7 +209,9 @@
           <div class="question" id="question9">
             <label for="q9">
               <h3>Pertanyaan 9:</h3>
-              <p>Apakah anda mengalami pusing?</p></label
+              <p>
+                Apakah dalam sebulan belakangan ini Anda merasa tidak bahagia?
+              </p></label
             >
             <label
               ><input type="radio" id="q9" name="q9" value="G9" /><span
@@ -206,7 +226,10 @@
           <div class="question" id="question10">
             <label for="q10">
               <h3>Pertanyaan 10:</h3>
-              <p>Apakah anda mengalami sakit kepala?</p></label
+              <p>
+                Apakah dalam sebulan belakangan ini Anda menjadi sering
+                menangis?
+              </p></label
             >
             <label
               ><input type="radio" id="q10" name="q10" value="G10" /><span
@@ -221,7 +244,10 @@
           <div class="question" id="question11">
             <label for="q11">
               <h3>Pertanyaan 11:</h3>
-              <p>Apakah mengalami kelelahandan lemah (gelisah)?</p></label
+              <p>
+                Apakah dalam sebulan belakangan ini Anda kurang menikmati
+                kegiatan Anda sehari-hari?
+              </p></label
             >
             <label
               ><input type="radio" id="q11" name="q11" value="G11" /><span
@@ -236,7 +262,10 @@
           <div class="question" id="question12">
             <label for="q12">
               <h3>Pertanyaan 12:</h3>
-              <p>Apakah anda mengalami mati rasa?</p></label
+              <p>
+                Apakah dalam sebulan belakangan ini Anda sulit mengambil
+                keputusan?
+              </p></label
             >
             <label
               ><input type="radio" id="q12" name="q12" value="G12" /><span
@@ -251,7 +280,10 @@
           <div class="question" id="question13">
             <label for="q13">
               <h3>Pertanyaan 13:</h3>
-              <p>Apakah badan anda mengigil?</p></label
+              <p>
+                Apakah dalam sebulan belakangan ini pekerjaan rutin Anda
+                terganggu?
+              </p></label
             >
             <label
               ><input type="radio" id="q13" name="q13" value="G13" /><span
@@ -266,7 +298,10 @@
           <div class="question" id="question14">
             <label for="q14">
               <h3>Pertanyaan 14:</h3>
-              <p>Apakah penglihatan anda menjadi kabur?</p></label
+              <p>
+                Apakah dalam sebulan belakangan ini Anda tidak mampu melakukan
+                hal-hal yang bermanfaat?
+              </p></label
             >
             <label
               ><input type="radio" id="q14" name="q14" value="G14" />
@@ -281,8 +316,8 @@
             <label for="q15">
               <h3>Pertanyaan 15:</h3>
               <p>
-                Apakah anda mengalami rasa sakit di Dada? "patah hati gak
-                termasuk ya!"
+                Apakah dalam sebulan belakangan ini Anda kehilangan minat
+                terhadap berbagai hal?
               </p></label
             >
             <label
@@ -298,7 +333,10 @@
           <div class="question" id="question16">
             <label for="q16">
               <h3>Pertanyaan 16:</h3>
-              <p>Apakah anda mengalami mimisan?</p></label
+              <p>
+                Apakah dalam sebulan belakangan ini Anda merasa diri Anda tidak
+                berharga?
+              </p></label
             >
             <label
               ><input type="radio" id="q16" name="q16" value="G16" /><span
@@ -313,7 +351,10 @@
           <div class="question" id="question17">
             <label for="q17">
               <h3>Pertanyaan 17:</h3>
-              <p>Apakah anda mengalami sakit kepala parah?</p></label
+              <p>
+                Apakah dalam sebulan belakangan ini dalam benak Anda ada pikiran
+                untuk mengakhiri hidup?
+              </p></label
             >
             <label
               ><input type="radio" id="q17" name="q17" value="G17" /><span
@@ -328,7 +369,10 @@
           <div class="question" id="question18">
             <label for="q18">
               <h3>Pertanyaan 18:</h3>
-              <p>Apakah anda mengalami sakit punggung?</p></label
+              <p>
+                Apakah dalam sebulan belakangan ini Anda merasa lelah
+                berkepanjangan?
+              </p></label
             >
             <label
               ><input type="radio" id="q18" name="q18" value="G18" /><span
@@ -343,7 +387,10 @@
           <div class="question" id="question19">
             <label for="q19">
               <h3>Pertanyaan 19:</h3>
-              <p>Apakah anda sering mual dan muntah?</p></label
+              <p>
+                Apakah dalam sebulan belakangan ini lambung Anda terasa tidak
+                nyaman?
+              </p></label
             >
             <label
               ><input type="radio" id="q19" name="q19" value="G19" /><span
@@ -358,7 +405,9 @@
           <div class="question" id="question20">
             <label for="q20">
               <h3>Pertanyaan 20:</h3>
-              <p>Apakah anda mengalami kejang?</p></label
+              <p>
+                Apakah dalam sebulan belakangan ini Anda gampang capek?
+              </p></label
             >
             <label
               ><input type="radio" id="q20" name="q20" value="G20" /><span
