--- a/index.html
+++ b/index.html
@@ -592,19 +592,23 @@
       <h2><span>Music</span>Playlist</h2>
       <div class="container">
         <div class="box-container">
-
-            <div class="box" data-src="images/music-1.mp3">
-                <div class="image">
-                    <div class="play">
-                        <i class="fas fa-play"></i>
-                    </div>
-                    <img src="images/album-1.jpg" alt="">
-                </div>
-                <div class="content">
-                    <h3>INSOMNIA</h3>
-                </div>
+          <div class="box" id="album1">
+            <div class="image">
+              <div class="play">
+                <i class="fas fa-play"></i>
+              </div>
+              <img src="images/album-1.jpg" alt="">
             </div>
-
+            <div class="content">
+              <h3>ANXIETY</h3>
+              <ul class="song-list">
+                <li><a href="https://www.youtube.com/watch?v=VIDEO_ID_1">Song 1</a></li>
+                <li><a href="https://www.youtube.com/watch?v=VIDEO_ID_2">Song 2</a></li>
+                <!-- Tambahkan lagu-lagu lain di sini -->
+              </ul>
+            </div>
+          </div>
+          <a href="https://youtu.be/kGiJbp0mwJE?feature=shared">
             <div class="box" data-src="images/music-2.mp3">
                 <div class="image">
                     <div class="play">
@@ -613,10 +617,11 @@
                     <img src="images/album-2.png" alt="">
                 </div>
                 <div class="content">
-                    <h3>GANGGUAN KECEMASAN</h3>
+                    <h3>STRESS</h3>
                 </div>
             </div>
-
+          </a>
+            <a href="https://youtu.be/_0kvEDYCrHU?si=HcYxoVDIdv1aaWHA">
             <div class="box" data-src="images/music-3.mp3">
                 <div class="image">
                     <div class="play">
@@ -625,10 +630,11 @@
                     <img src="images/album-3.png" alt="">
                 </div>
                 <div class="content">
-                    <h3>MEMBUANG ENERGI</h3>
+                    <h3>DEPRESI</h3>
                 </div>
             </div>
-
+          </a>
+            <a href="https://youtu.be/LlN8MPS7KQs?si=v8a2TCGXJZqAkL9H">
             <div class="box" data-src="images/music-4.mp3">
                 <div class="image">
                     <div class="play">
@@ -637,10 +643,10 @@
                     <img src="images/album-4.png" alt="">
                 </div>
                 <div class="content">
-                    <h3>RILEKS DAN DAMAI</h3>
+                    <h3>INSOMNIA</h3>
                 </div>
             </div>
-
+          </a>
         </div>
         </div>
     </section>
@@ -674,34 +680,34 @@
       <h2><span>Contact </span>kami</h2>
       <div class="container">
         <div class="row">
-          <img src="/images/avatar1.jpg" alt="" class="toggle"  data-facebook="https://www.facebook.com/user1" data-twitter="https://twitter.com/user1" data-instagram="https://www.instagram.com/">
+          <img src="/images/avatar1.jpg" alt="" class="toggle"  data-linkedin="https://www.facebook.com/user1" data-twitter="https://twitter.com/user1" data-instagram="https://www.instagram.com/">
           <h3>Pembimbing</h3>
           <p>Gita Fadila Fitriana, S.Kom., M.Kom</p>
         </div>
       </div>
       <div class="container1">
         <div class="row">
-          <img src="/images/avatar2.jpg" alt="" class="toggle"  data-facebook="https://www.facebook.com/" data-twitter="https://twitter.com/user2" data-instagram="https://www.instagram.com/user2">
+          <img src="/images/KAK ALDA.png" alt="" class="toggle"  data-linkedin="https://www.facebook.com/" data-twitter="https://twitter.com/user2" data-instagram="https://www.instagram.com/user2">
           <h3>Anggota</h3>
           <p>Rosalina Alda</p>
         </div>
         <div class="row">
-          <img src="/images/avatar2.jpg" alt="" class="toggle"  data-facebook="https://www.facebook.com/" data-twitter="https://twitter.com/user2" data-instagram="https://www.instagram.com/user2">
+          <img src="/images/KAK BINTANG.png" alt="" class="toggle"  data-linkedink="https://www.facebook.com/" data-twitter="https://twitter.com/user2" data-instagram="https://www.instagram.com/user2">
           <h3>Ketua</h3>
           <p>Bintang Ahmada Farhan Adama</p>
         </div>
         <div class="row">
-          <img src="/images/avatar2.jpg" alt=""  class="toggle"  data-facebook="https://www.facebook.com/" data-twitter="https://twitter.com/user2" data-instagram="https://www.instagram.com/user2">
+          <img src="/images/KAK SATYA.png" alt=""  class="toggle"  data-linkedin="https://www.facebook.com/" data-twitter="https://twitter.com/user2" data-instagram="https://www.instagram.com/user2">
           <h3>anggota</h3>
           <p>Satya Prakash</p>
         </div>
         <div class="row">
-          <img src="/images/avatar2.jpg" alt="" class="toggle"  data-facebook="https://www.facebook.com/" data-twitter="https://twitter.com/user2" data-instagram="https://www.instagram.com/user2">
+          <img src="/images/KAK JANNAH.png" alt="" class="toggle"  data-linkedin="https://www.facebook.com/" data-twitter="https://twitter.com/user2" data-instagram="https://www.instagram.com/user2">
           <h3>anggota</h3>
           <p>Mivtakhul Janah</p>
         </div>
         <div class="row">
-          <img src="/images/avatar2.jpg" alt="" class="toggle"  data-facebook="https://www.facebook.com/" data-twitter="https://twitter.com/user2" data-instagram="https://www.instagram.com/user2">
+          <img src="/images/MUSYAFFA.png" alt="" class="toggle"  data-linkedin="https://www.facebook.com/" data-twitter="https://twitter.com/user2" data-instagram="https://www.instagram.com/user2">
           <h3>anggota</h3>
           <p>Musyaffa Ahmad Robbani</p>
         </div>
@@ -717,7 +723,6 @@
       <div class="sosial">
         <a href="#"><i data-feather="mail"></i></a>
         <a href="#"><i data-feather="instagram"></i></a>
-        <a href="#"><i data-feather="youtube"></i></a>
       </div>
       <div class="links">
         <a href="#">Home</a>
