--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/logo.jpg" type="image/jpg" >
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -35,6 +35,8 @@
         <a href="#Menu">Menu</a>
         <a href="#Music">Music</a>
         <a href="#contact">Contact</a>
+        <a href="#contact">Contact</a>
+<a href="ChatApp/index.php">Chat</a>
       </div>
       <div class="navbar-extra1">
         <a href="#" id="hamburger-menu1"> <i data-feather="menu"></i></a>
@@ -339,7 +341,7 @@
                         <p class="sl--sub-text">
                           Penggunaan Obat-obatan berlebih
                         </p>
-                        <h2>Fakto Obat-obatan</h2>
+                        <h2>Faktor Obat-obatan</h2>
                         <p class="sl--card-content">
                           <p>Penggunaan obat-obatan berlebih atau penyalahgunaan obat-obatan adalah salah satu faktor yang dapat memiliki dampak serius pada kesehatan fisik, mental, dan sosial individu. Ini merujuk pada konsumsi obat-obatan, baik resep maupun ilegal, di luar dosis atau tujuan medis yang direkomendasikan. Penyalahgunaan obat-obatan dapat mencakup obat-obatan rekreasi, obat resep, atau narkotika.</p>
 <br>
@@ -680,34 +682,34 @@
       <h2><span>Contact </span>kami</h2>
       <div class="container">
         <div class="row">
-          <img src="/images/avatar1.jpg" alt="" class="toggle"  data-linkedin="https://www.facebook.com/user1" data-twitter="https://twitter.com/user1" data-instagram="https://www.instagram.com/">
+          <img src="/images/Bu Gita.png" alt="" class="toggle"  data-linkedin="https://www.facebook.com/user1" data-envelope="gita@ittelkom-pwt.ac.id" data-instagram="https://instagram.com/gitafadila?igshid=YTQwZjQ0NmI0OA==">
           <h3>Pembimbing</h3>
           <p>Gita Fadila Fitriana, S.Kom., M.Kom</p>
         </div>
       </div>
       <div class="container1">
         <div class="row">
-          <img src="/images/KAK ALDA.png" alt="" class="toggle"  data-linkedin="https://www.facebook.com/" data-twitter="https://twitter.com/user2" data-instagram="https://www.instagram.com/user2">
+          <img src="/images/KAK ALDA.png" alt="" class="toggle"  data-linkedin="https://id.linkedin.com/in/rosalina-alda-21783a207" data-envelope="rosalinaaldastar@gmail.com" data-instagram="https://instagram.com/rsln.ald?igshid=YTQwZjQ0NmI0OA">
           <h3>Anggota</h3>
           <p>Rosalina Alda</p>
         </div>
         <div class="row">
-          <img src="/images/KAK BINTANG.png" alt="" class="toggle"  data-linkedink="https://www.facebook.com/" data-twitter="https://twitter.com/user2" data-instagram="https://www.instagram.com/user2">
+          <img src="/images/KAK BINTANG.png" alt="" class="toggle"  data-linkedink="https://www.linkedin.com/in/bintang-ahmada-adama-99901b223/" data-envelope="adamabintang@gmail.com" data-instagram="https://instagram.com/bintangahmada?igshid=OGQ5ZDc2ODk2ZA">
           <h3>Ketua</h3>
           <p>Bintang Ahmada Farhan Adama</p>
         </div>
         <div class="row">
-          <img src="/images/KAK SATYA.png" alt=""  class="toggle"  data-linkedin="https://www.facebook.com/" data-twitter="https://twitter.com/user2" data-instagram="https://www.instagram.com/user2">
+          <img src="/images/KAK SATYA.png" alt=""  class="toggle"  data-linkedin="https://www.facebook.com/" data-mail="20102165@gmail.com" data-instagram="https://www.instagram.com/user2">
           <h3>anggota</h3>
           <p>Satya Prakash</p>
         </div>
         <div class="row">
-          <img src="/images/KAK JANNAH.png" alt="" class="toggle"  data-linkedin="https://www.facebook.com/" data-twitter="https://twitter.com/user2" data-instagram="https://www.instagram.com/user2">
+          <img src="/images/KAK JANNAH.png" alt="" class="toggle"  data-linkedin="https://www.facebook.com/" data-mail="mvtkhljnh@gmail.com" data-instagram="https://instagram.com/mivtaje?igshid=NGVhN2U2NjQ0Yg==">
           <h3>anggota</h3>
           <p>Mivtakhul Janah</p>
         </div>
         <div class="row">
-          <img src="/images/MUSYAFFA.png" alt="" class="toggle"  data-linkedin="https://www.facebook.com/" data-twitter="https://twitter.com/user2" data-instagram="https://www.instagram.com/user2">
+          <img src="/images/MUSYAFFA.png" alt="" class="toggle"  data-linkedin="https://www.facebook.com/" data-mail="musyaffa.ahro@gmail.com" data-instagram="https://instagram.com/dmp.mus?igshid=OGQ5ZDc2ODk2ZA==">
           <h3>anggota</h3>
           <p>Musyaffa Ahmad Robbani</p>
         </div>
